# photogrammetry-service

./: .env.example  .gitignore  README.md  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  test_progress.py
.github/workflows/: ci.yml  pulumi.yml  push.yml
api/: .dockerignore  Dockerfile  main.py  models.py  requirements.txt
api/routers/: __init__.py  projects.py
api/services/: __init__.py  batch.py  processor.py  pubsub.py  storage.py
frontend/: app.js  config.example.js  index.html  style.css
infrastructure/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  STACK_CONTRACT.md  index.ts  package-lock.json  package.json  tsconfig.json
infrastructure/src/: batch.ts  cloud-run.ts  cloudflare-dns.ts  config.ts  iam.ts  iap.ts  monitoring.ts  storage.ts
tests/: conftest.py  test_api_endpoints.py  test_batch_domain.py  test_main_cors.py  test_storage_sanitize.py
worker/: .dockerignore  Dockerfile  main.py
